[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Levels/Chapter01/RocbertoIntro.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "ShowRocberto"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("RocbertoCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.54, 2.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.84, 2.87 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "focus_rocberto"
}, {
"args": [  ],
"method": "say_hi"
} ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 42.0

[node name="RocbertoIntro" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RocbertoAnimations" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/ShowRocberto = SubResource( 1 )

[node name="RocbertoCamera" type="Camera2D" parent="."]
modulate = Color( 0.760784, 0.760784, 0.819608, 1 )
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="RocbertoTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RocbertoTrigger"]
shape = SubResource( 2 )
